// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalModalContext Should not render the modal 1`] = `
<div>
  <h1>
    Hello World
  </h1>
</div>
`;

exports[`GlobalModalContext Should render the component 1`] = `
<div>
  <h1>
    Hello World
  </h1>
  <div
    id="modal"
  />
</div>
`;

exports[`useModalContext Should close the modal 1`] = `
<div>
  <button>
    Open Modal
  </button>
  <div
    class=""
    id="modal"
  />
</div>
`;

exports[`useModalContext Should close the modal globally 1`] = `
<div>
  <button>
    Open Modal
  </button>
  <div
    class=""
    id="modal"
  />
</div>
`;

exports[`useModalContext Should open the modal 1`] = `
<div>
  <button>
    Open Modal
  </button>
  <div
    class="unhide"
    id="modal"
  >
    <div
      class="card"
    >
      <h3>
        Rendered
      </h3>
      <button>
        Close
      </button>
    </div>
  </div>
</div>
`;
